<resources>
    <string name="app_name">P and O</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="title_activity_about_us_scrolling">P and O</string>

    <string name="AboutUs" formatted="true">



        "PandO AKA "Period and Ovulation".\n\n"
        "PandO is the Female Menstruation Tracker App.\n"
        "What is Menstruation/Period ? \n\n"

        "Menstruation (also known as a period and many other colloquial terms) is the regular discharge of"
        "blood and mucosal tissue from the inner lining of the uterus through the vagina. The menstrual cycle"
        "is characterized by the rise and fall of hormones. Menstruation is triggered by falling progesterone"
        "levels and is a sign that pregnancy has not occurred.\n"

        "The first period, a point in time known as menarche, usually begins between the ages of 12 and 15."
        "Menstruation starting as young as 8 years would still be considered normal."
        "The average age of the first period is generally later in the developing world, and earlier in the developed world."
        "The typical length of time between the first day of one period and the first day of the next is 21 to 45 days in young women. In adults, the range is between 21 and 31 days with the average being 28 days."
        "Bleeding usually lasts around 2 to 7 days. Periods stop during pregnancy and typically do not resume during the initial months of breastfeeding."
        "Menstruation stops occurring after menopause, which usually occurs between 45 and 55 years of age.\n"


        Up to 80% of women do not experience problems sufficient to disrupt daily functioning either during menstruation or in the days leading up to menstruation. Symptoms in advance of menstruation that do interfere with normal life are called premenstrual syndrome (PMS).
        Some 20 to 30% of women experience PMS, with 3 to 8% experiencing severe symptoms.
        These include acne, tender breasts, bloating, feeling tired, irritability, and mood changes.
        Other symptoms some women experience include painful periods and heavy bleeding during menstruation and abnormal bleeding at any time during the menstrual cycle.
        A lack of periods, known as amenorrhea, is when periods do not occur by age 15 or have not re-occurred in 90 days.\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="todo">TODO</string>
    <string name="about_us">About Us</string>
    <string name="home">Home</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>
    <string name="username">Username</string>
    <string name="submit_details">Submit Details</string>
    <string name="height">Height</string>
    <string name="last_period_date">Last Period Date</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="weight">Weight</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="enter_your_details">Enter Your Details</string>
    <string name="know_your_details">Know Your Details</string>
    <string name="logout">logout</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="please_enter_your_e_mail_address_to_reset_your_password">Please enter your E-mail address to Reset your Password</string>
    <string name="new_user_register_here">New User,Register here</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="sign_in">Sign In</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="last_period_date">Last Period Date</string>
    <string name="upcoming_period_date">Upcoming Period Date</string>
    <string name="warning_period_date">Warning Period Date</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="blood_pressure">Blood Pressure</string>
</resources>