<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF53E0"
    tools:context=".SignInActivity">

  <EditText
      android:id="@+id/username"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginTop="100dp"
      android:layout_marginEnd="24dp"
      android:hint="@string/username"
      android:inputType="textCapCharacters"
      android:selectAllOnFocus="true"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:autofillHints="" />

  <EditText
      android:id="@+id/weight"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginEnd="24dp"

      android:hint="@string/weight"
      android:imeOptions="actionDone"
      android:inputType="number"
      android:selectAllOnFocus="true"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/Dateofbirth"
      tools:ignore="HardcodedText"
      android:autofillHints="" />

  <androidx.appcompat.widget.AppCompatEditText
      android:id="@+id/Dateofbirth"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginEnd="24dp"
      android:hint="@string/date_of_birth"
      android:imeOptions="actionDone"
      android:inputType="date"
      android:selectAllOnFocus="true"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/username" />

  <EditText
      android:id="@+id/heart_rate"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginEnd="24dp"
      android:hint="@string/heart_rate"
      android:inputType="number"
      android:selectAllOnFocus="true"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/last_period_date"
      android:autofillHints="" />

  <EditText
      android:id="@+id/blood_pressure"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginTop="4dp"
      android:layout_marginEnd="24dp"
      android:hint="@string/blood_pressure"
      android:imeOptions="actionDone"
      android:inputType="number"
      android:selectAllOnFocus="true"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/heart_rate"
      android:autofillHints="" />

  <EditText
      android:id="@+id/last_period_date"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginTop="4dp"
      android:layout_marginEnd="24dp"
      android:hint="@string/last_period_date"
      android:imeOptions="actionDone"
      android:inputType="date"
      android:selectAllOnFocus="true"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/height"
      android:autofillHints="" />

  <EditText
      android:id="@+id/height"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginEnd="24dp"
      android:hint="@string/height"
      android:inputType="number"
      android:selectAllOnFocus="true"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/weight"
      android:autofillHints="" />


  <Button
      android:id="@+id/details"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="start"
      android:layout_marginStart="48dp"
      android:layout_marginEnd="48dp"
      android:background="@drawable/rounded_corner"
      android:text="@string/submit_details"
      android:textColor="#032E44"
      android:textSize="24sp"
      android:enabled="true"
      app:backgroundTint="#3C8BEB"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/blood_pressure" />

</androidx.constraintlayout.widget.ConstraintLayout>